--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 </section>
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="../static/images/calendar1.png" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="https://webdemo1-1ixj.onrender.com/"><img src="../static/images/calendar1.png" alt="" width="2000" class="cards"/></a>
       <h4>Calendario - Cotizador</h4>
       <p class="tag">Costos por Actividades, Horarios&nbsp;</p>
       <p class="text_column">Calcula el costo de tu cliente utilizando un calendario donde seleccionas los días y las actividades así como los horarios.</p>
